<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/bookDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="end|center_horizontal"
                android:maxLines="2"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="Book Title"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/bookDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/book_cover_image"
                android:maxHeight="200dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bookDetailsText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/management_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/set_book_price_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        tools:visibility="visible" />

                    <EditText
                        android:id="@+id/change_price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/change_book_price"
                        android:inputType="numberDecimal"
                        android:textSize="18sp"
                        tools:visibility="visible" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:visibility="visible" />

                    <Button
                        android:id="@+id/set_price_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:onClick="SetPriceOnClick"
                        android:text="@string/set"
                        tools:visibility="visible" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/set_stock_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:visibility="visible" />

                    <EditText
                        android:id="@+id/change_stock_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/change_stock_amount"
                        android:inputType="number"
                        tools:visibility="visible" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:visibility="visible" />

                    <Button
                        android:id="@+id/set_stock_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:onClick="SetStockOnClick"
                        android:text="@string/set"
                        tools:visibility="visible" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stock_changeByOne_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:visibility="gone">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:minWidth="5dp"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/bookDetailsSaleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:onClick="OnSaleClick"
                    android:text="@string/sale_button"
                    android:textSize="24sp"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/stock_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/stock_amount"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/bookDetailsReturnButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:onClick="OnReturnClick"
                    android:text="@string/plus_sign"
                    android:textSize="24sp"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:minWidth="5dp"
                    android:visibility="visible"
                    tools:visibility="visible" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/detail_reserve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="100dp"
        android:onClick="reserveOnClick"
        android:text="Reserve book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>